force-app/main/default/objects/Survey__c/fields/SundayEndTime_5a__c.field-meta.xml
<CustomField>
    <fullName>SundayEndTime_5a__c</fullName>
    <label>Sunday End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>