force-app/main/default/objects/Survey__c/fields/SundayStartTime_5b__c.field-meta.xml
<CustomField>
    <fullName>SundayStartTime_5b__c</fullName>
    <label>Sunday Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>