force-app/main/default/objects/Survey__c/fields/ThursdayEndTime_5a__c.field-meta.xml
<CustomField>
    <fullName>ThursdayEndTime_5a__c</fullName>
    <label>Thursday End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>