force-app/main/default/objects/Survey__c/fields/ThursdayStartTime_5a__c.field-meta.xml
<CustomField>
    <fullName>ThursdayStartTime_5a__c</fullName>
    <label>Thursday Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>