force-app/main/default/objects/Survey__c/fields/TuesdayEndTime_5b__c.field-meta.xml
<CustomField>
    <fullName>TuesdayEndTime_5b__c</fullName>
    <label>Tuesday End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>