force-app/main/default/objects/Survey__c/fields/TuesdayStartTime_5b__c.field-meta.xml
<CustomField>
    <fullName>TuesdayStartTime_5b__c</fullName>
    <label>Tuesday Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>