force-app/main/default/objects/Survey__c/fields/WednesdayEndTime_5b__c.field-meta.xml
<CustomField>
    <fullName>WednesdayEndTime_5b__c</fullName>
    <label>Wednesday End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>