force-app/main/default/objects/Survey__c/fields/WednesdayStartTime_5b__c.field-meta.xml
<CustomField>
    <fullName>WednesdayStartTime_5b__c</fullName>
    <label>Wednesday Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>