force-app/main/default/objects/Survey__c/recordTypes/Practitioner.recordType-meta.xml
<RecordType>
    <fullName>Practitioner</fullName>
    <active>true</active>
    <label>Practitioner</label>
</RecordType>