force-app/main/default/objects/Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Renewal__c</columns>
    <columns>Registrant__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>